# cmake-utils

./: .gitignore  .gitmodules  README.md
.github/actions/: PrepareSingleProject.yml
.github/workflows/: PrepareSingleProject  singleproject.yml
samples/MultiProjects/: CMakeLists.txt  main.cpp
samples/MultiProjects/AwesomeLib1/: CMakeLists.txt
samples/MultiProjects/AwesomeLib1/include/: MyClass.h
samples/MultiProjects/AwesomeLib1/src/: MyClass.cpp
samples/MultiProjects/AwesomeLib2/: CMakeLists.txt
samples/MultiProjects/AwesomeLib2/include/: MyStruct.h
samples/MultiProjects/AwesomeLib2/src/: MyStruct.cpp
samples/MultiProjects/include/: BiggerClass.h
samples/MultiProjects/src/: BiggerClass.cpp
samples/SingleProject/: CMakeLists.txt  Doxyfile  main.cpp
samples/SingleProject/include/: BiggerClass.h  Car.h  IEngine.h
samples/SingleProject/src/: BiggerClass.cpp  Car.cpp
samples/SingleProject/test_boost/: BiggerClassParameterizedTests.cpp  BiggerClassTests.cpp  CMakeLists.txt  CarFixture.h  CarTests.cpp  EngineMock.h  FooTests.cpp  VectorsTests.cpp  main.cpp
samples/SingleProject/test_catch2/: BiggerClassTests.cpp  CMakeLists.txt  CarFixture.h  CarTests.cpp  EngineMock.h  VectorsTests.cpp
samples/SingleProject/test_gtest/: BiggerClassParameterizedTests.cpp  BiggerClassTests.cpp  CMakeLists.txt  CarFixture.h  CarTests.cpp  EngineMock.h  FooTests.cpp  VectorFixture.h  VectorsTests.cpp
